kong2kic/testdata/upstream-v2-output-expected.yaml
apiVersion: configuration.konghq.com/v1
kind: KongIngress
metadata:
  annotations:
    konghq.com/tags: user-level,low-priority
    kubernetes.io/ingress.class: kong
  name: simple-service-upstream
upstream:
  algorithm: round-robin
  hash_fallback: none
  hash_on: none
  hash_on_cookie_path: /
  healthchecks:
    active:
      concurrency: 10
      headers:
        x-another-header:
        - bla
        x-my-header:
        - foo
        - bar
      healthy:
        http_statuses:
        - 200
        - 302
        interval: 0
        successes: 0
      http_path: /
      https_sni: example.com
      https_verify_certificate: true
      timeout: 1
      type: http
      unhealthy:
        http_failures: 0
        http_statuses:
        - 429
        - 404
        - 500
        - 501
        - 502
        - 503
        - 504
        - 505
        interval: 0
        tcp_failures: 0
        timeouts: 0
    passive:
      healthy:
        http_statuses:
        - 200
        - 201
        - 202
        - 203
        - 204
        - 205
        - 206
        - 207
        - 208
        - 226
        - 300
        - 301
        - 302
        - 303
        - 304
        - 305
        - 306
        - 307
        - 308
        successes: 0
      type: http
      unhealthy:
        http_failures: 0
        http_statuses:
        - 429
        - 500
        - 503
        tcp_failures: 0
        timeouts: 0
    threshold: 0
  slots: 10000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    konghq.com/override: simple-service-upstream
  name: simple-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: simple-service
---
